--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자기소개:)</title>
+    <meta property = "og:title" content="자기소개 페이지">
+    <meta property = "og:"description" content="처음 만듬">
+    <meta property = "og:"image" content="">
+
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
